# isosurface

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: deps.cmake  glad.cmake  glm.cmake
data/: inspect-inf.pl  read-inf.pl  test.inf
ext/SDL2/include/: SDL_revision.h
ext/imgui/: CMakeLists.txt  imgui_impl_opengl3.h
include/: Camera.hpp  Isosurface.hpp  MainWindow.hpp  Model.hpp  VolumeData.hpp  camera.h  constants.h  isosurface.h  marching_cubes_tables.h  marching_tetrahedra_tables.h  model.h  scene.h  shader.h  static_data.h
models/default/: engine.inf  foot.inf
shader/: cross_section.frag  default.frag  default.vert
src/: Camera.cpp  Isosurface.cpp  MainWindow.cpp  MarchingCubesTables.cpp  Model.cpp  Shader.cpp  Util.cpp  VolumeData.cpp  camera.cc  constants.cc  isosurface.cc  main.cc  main.cpp  marching_cubes_tables.cc  marching_tetrahedra_tables.cc  model.cc  scene.cc  shader.cc  static_data.cc
src/app/: CMakeLists.txt  MainWindow.cpp  MarchingTetrahedraTables.cpp  SDLOpenGLWindow.cpp  VolumeData.cpp
src/app/include/: Camera.hpp  MainWindow.hpp  MarchingCubesTables.hpp  SDLOpenGLWindow.hpp
src/isosurface/: CMakeLists.txt  MainWindow.cpp
src/isosurface/data/demo/: brain.inf
src/isosurface/include/: Shader.hpp  Util.hpp
src/isosurface/shader/: cross_section.frag  default.frag
